[package]
name = "solana-transfer-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.17.7"
solana-client = "1.17.7"
solana-transaction-status = "1.17.7"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
chrono = "0.4"
futures = "0.3"
prettytable-rs = "0.10"
dirs = "5.0"
serde_json = "1.0"
